<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvCar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/ivCar"
            android:layout_width="125dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:contentDescription="CarImage"
            android:src="@drawable/img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCarName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_brand_model"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="2dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tvCarRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_registration"
                android:layout_marginStart="4dp"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp">

                <ImageView
                    android:id="@+id/ivSunIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="24dp"
                    android:minHeight="24dp"
                    android:layout_marginHorizontal="4dp"
                    android:src="@drawable/ic_sun"/>

                <TextView
                    android:id="@+id/tvDayPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_day_price"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="4dp"
                android:layout_marginVertical="2dp">

                <ImageView
                    android:id="@+id/ivMoonIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="24dp"
                    android:minHeight="24dp"
                    android:layout_marginHorizontal="4dp"
                    android:src="@drawable/ic_moon"/>

                <TextView
                    android:id="@+id/tvNightPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_night_price"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>