<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CarsFragment"
    tools:context=".CarFragment">

    <ImageView
        android:id="@+id/ivCarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="176dp"
        android:alpha=".75"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintDimensionRatio="w,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/tv_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAddress"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="16dp"
        android:text="@string/tv_address"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvZipCity"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvZipCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:text="@string/tv_zip_city"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toTopOf="@id/rvCars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline4" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCars"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline4"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/tvNoCarsAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="There are no cars available"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCarRecyclerView" />


</androidx.constraintlayout.widget.ConstraintLayout>