<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvLocations"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="6dp">

    <LinearLayout
        android:id="@+id/llLine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/ivStation"
            android:layout_width="125dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_name"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="2dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_address"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="2dp"
                android:textSize="14sp"
                android:textStyle="italic" />
            <TextView
                android:id="@+id/tvZipCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_zip_city"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="2dp"
                android:textSize="14sp"
                android:textStyle="italic" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:layout_marginStart="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivCarIcon"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="2dp"
                    android:src="@drawable/ic_car"/>

                <TextView
                    android:id="@+id/tvNumCars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginEnd="6dp"
                    android:text=""
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/ivParkingIcon"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="4dp"
                    android:layout_marginStart="6dp"
                    android:src="@drawable/ic_parking" />

                <TextView
                    android:id="@+id/tvNumParkingSpaces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginEnd="6dp"
                    android:text=""
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/ivChargerIcon"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="4dp"
                    android:layout_marginStart="6dp"
                    android:src="@drawable/ic_ev_station"/>

                <TextView
                    android:id="@+id/tvNumChargers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginEnd="6dp"
                    android:text=""
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>